--- a/Presentation/MyBlogApp.UI/Views/_ViewImports.cshtml
+++ b/Presentation/MyBlogApp.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using MyBlogApp.UI
-@using MyBlogApp.UI.Models
+@using MyBlogApp.Application.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
